# langgraph-fastapi-boilerplate

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  architecture.excalidraw  compose.yml  langgraph.json  pyproject.toml
backend/: pyproject.toml
backend/skills/weather-info/: SKILL.md
backend/skills/web-research/: SKILL.md
backend/src/: db.py  schemas.py  worker.py
backend/src/agent/: __init__.py  context.py  graph.py  state.py  tools.py  utils.py
backend/src/api/: arq_run_manager.py  deps.py  lease_reaper.py  logging.yaml  logging_config.py  main.py  run_manager.py  run_manager_base.py
backend/src/api/routes/: assistants.py  crons.py  models.py  runs.py  store.py  threads.py
backend/tests/integration_tests/: test_api.py
backend/tests/unit_tests/: test_agent.py  test_hitl.py
docs/: architecture.excalidraw
frontend/: nginx.conf  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/ui/: model-selector.tsx  prompt-input.tsx
tests/unit_tests/: test_agent.py  test_hitl.py
