[project]
name = "langgraph-fastapi-boilerplate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/core", "packages/backend"]

[tool.uv.sources]
core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
]
