[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-fastapi-boilerplate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0",
    "langchain>=0.3",
    "langchain-anthropic",
    "langchain-openai",
    "langgraph-checkpoint-postgres>=3.0",
    "psycopg[binary,pool]>=3.2",
    "python-dotenv",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
arq = ["arq>=0.26", "redis>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
    "asgi-lifespan>=2.1.0",
    "langgraph-cli[inmem]>=0.4.19",
]
